--- a/src/classes/WaveMetadataApplication.cls
+++ b/src/classes/WaveMetadataApplication.cls
@@ -3,7 +3,6 @@ public virtual class WaveMetadataApplication {
 	public String appType;
 	public String appDescription;
 	public String dataflowLocation;
+	public String userProfilePicturesUrl;
 	public List<WaveMetadataApplicationObject> objects;
-	public List<Edgemart> edgemarts;
-	public List<WaveMetadataApplicationDashboard> dashboards;
 }
