--- a/src/classes/WaveMetadataApplicationObject.cls
+++ b/src/classes/WaveMetadataApplicationObject.cls
@@ -6,4 +6,5 @@ public class WaveMetadataApplicationObject {
 	public List<String> dateFieldsToShift;
 	public List<WaveMetadataApplicationObject> children;
 	public List<WaveMetadataApplicationObjectRelation> relations;
+	public List<WaveRecordTypeItem> recordTypes;
 }
